fixed spacing mobile view

--- a/style.css
+++ b/style.css
@@ -99,12 +99,12 @@ body {
 }
 
 .main {
-    /* display: flex; */
     justify-content: center;
     align-items: center;
-    height: 90vh;
     text-align: center;
     width: 22.4375rem;
+    margin-block: 5.5rem 3rem;
+    margin-inline: auto;
 }
 
 .title {
@@ -123,7 +123,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-block-start: 4em;
+    margin-block: 3em 1.5em;
     padding-block: 1em;
     background: hsl(var(--clr-accent-blue));
     border-radius: 10px;
@@ -134,7 +134,6 @@ body {
 }
 
 .call-to-action > p {
-    /* line-height: 1.25rem; */
     margin-top: 0;
 }
 
@@ -225,12 +224,14 @@ input:focus {
 }
 
 .terms {
-    width: 100%;
     color: hsl(var(--clr-neutral-light));
     font-size: 0.6875rem;
     border: none;
     margin-block-start: 0;
     line-height: 1.3125rem;
+    width: 15.5625rem;
+    text-align: center;
+    margin: .5em auto;
 }
 
 .terms > a {
@@ -239,16 +240,14 @@ input:focus {
     text-decoration: none;
 }
 
-.footer {
-    text-align: center;
-}
 
 .form-group {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-end;}
-
+    align-items: flex-end;
+}
+    
 .error {
     border: 2px solid hsl(var(--clr-primary-red));
     background: url('./images/icon-error.svg') no-repeat;
@@ -263,6 +262,12 @@ input:focus {
     margin-top: -4px;
     margin-bottom: 10px;
 }
+
+.footer {
+    text-align: center;
+    position: relative;
+}
+
 @media (min-width: 90rem) {
     .main {
         width: 100%;
@@ -270,7 +275,7 @@ input:focus {
         justify-content: center;
         align-items: center;
         padding-inline-start: 2em;
-        /* border: 10px solid cyan; */
+        height: 80vh;
     }
 
     .first-col {
@@ -336,6 +341,5 @@ input:focus {
 
     .error-icon {
         right: -410px;
-
     }
 }
